switch to maven